공통코드 관리 추가중